switched annual report to be dark gray on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -187,7 +187,7 @@
       <section id="story" class="px-0 pb-0">
         <div class="px-6">
           <div class="page-constrained mx-auto text-center mb-6">
-            <p class="pretitle">The Overflow Story</p>
+            <p class="pretitle text-blue-light">The Overflow Story</p>
             <h2 class="display-2 px-md-4 my-6 text-blue-dark">
               <span data-aos="fade-in">God</span>
               <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="150">always</span>
@@ -496,45 +496,45 @@
         </div>
       </section>
 
-      <section id="faqs" class="bg-blue-dark text-white">
+      <section id="report" class="bg-gray-darker text-white">
         <div class="page-constrained mx-auto">
           <div class="text-center mb-7">
-            <p class="pretitle text-blue-light">Year in Review</p>
+            <p class="pretitle">Year in Review</p>
             <h2 class="display-2">Annual Report</h2>
           </div>
           <div class="d-grid grid-cols-2 gap-7 mb-7 py-2">
             <div class="col-span-2 col-span-md-1 d-grid grid-cols-1 gap-y-4">
-              <h3 class="h2 font-black text-blue-light mb-0">2022 Income</h3>
+              <h3 class="h2 font-black text-white mb-0">2022 Income</h3>
               <div data-aos="fade-up">
-                <h4 class="h5 mb-0">General Tithes &amp; Offerings</h4>
-                <p class="h5 text-blue-light tracking-tighter mb-0">$00.00m <span class="text-blue">00%</span></p>
+                <h4 class="h5 text-kraft mb-0">General Tithes &amp; Offerings</h4>
+                <p class="h5 tracking-tighter mb-0">$00.00m <span class="text-gray o-70">00%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 mb-0">Overflow Fund</h4>
-                <p class="h5 text-blue-light tracking-tighter mb-0">$0.00m <span class="text-blue">0.0%</span></p>
+                <h4 class="h5 text-kraft mb-0">Overflow Fund</h4>
+                <p class="h5 tracking-tighter mb-0">$0.00m <span class="text-gray o-70">0.0%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 mb-0">The Gauntlet Fund</h4>
-                <p class="h5 text-blue-light tracking-tighter mb-0">$0.00m <span class="text-blue">0.0%</span></p>
+                <h4 class="h5 text-kraft mb-0">The Gauntlet Fund</h4>
+                <p class="h5 tracking-tighter mb-0">$0.00m <span class="text-gray o-70">0.0%</span></p>
               </div>
             </div>
             <div class="col-span-2 col-span-md-1 d-grid grid-cols-1 gap-y-4">
-              <h3 class="h2 font-black text-blue-light mb-0">2022 Expenses</h3>
+              <h3 class="h2 font-black text-white mb-0">2022 Expenses</h3>
               <div data-aos="fade-up">
-                <h4 class="h5 mb-0">Next Generation</h4>
-                <p class="h5 text-blue-light tracking-tighter mb-0">$00.00m <span class="text-blue">00%</span></p>
+                <h4 class="h5 text-kraft mb-0">Next Generation</h4>
+                <p class="h5 tracking-tighter mb-0">$00.00m <span class="text-gray o-70">00%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 mb-0">Gatherings, Events &amp; Facilities</h4>
-                <p class="h5 text-blue-light tracking-tighter mb-0">$0.00m <span class="text-blue">0.0%</span></p>
+                <h4 class="h5 text-kraft mb-0">Gatherings, Events &amp; Facilities</h4>
+                <p class="h5 tracking-tighter mb-0">$0.00m <span class="text-gray o-70">0.0%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 mb-0">Discipleship, Outreach, &amp; Missions</h4>
-                <p class="h5 text-blue-light tracking-tighter mb-0">$0.00m <span class="text-blue">0.0%</span></p>
+                <h4 class="h5 text-kraft mb-0">Discipleship, Outreach, &amp; Missions</h4>
+                <p class="h5 tracking-tighter mb-0">$0.00m <span class="text-gray o-70">0.0%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 mb-0">Support Operational Expenses</h4>
-                <p class="h5 text-blue-light tracking-tighter mb-0">$0.00m <span class="text-blue">0.0%</span></p>
+                <h4 class="h5 text-kraft mb-0">Support Operational Expenses</h4>
+                <p class="h5 tracking-tighter mb-0">$0.00m <span class="text-gray o-70">0.0%</span></p>
               </div>
             </div>
           </div>
