moved 3d video embed position on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -247,11 +247,13 @@
         <div class="pt-7 position-relative text-center">
           <div class="text-constrained mx-auto px-6 bring-forward" data-aos="fade-up">
             <h3 class="h5 text-blue mb-5"><span class="display-1 text-blue-dark">2023</span><br />Build Aiken Campus</h3>
-            <pre>[[ 3D Video Embed ]]</pre>
-            <p>Because of your generosity, we were able to purchase the land for the new Aiken Campus in 2021. But Aiken's story isn't done yet!</p>
-            <p class="mb-0">
+            <p class="lead text-gray-darker">
+              Because of your generosity, we were able to purchase the land for the new Aiken Campus in 2021. But Aiken's story isn't done yet!
+            </p>
+            <p class="mb-8">
               <a href="#give" class="btn btn-primary bg-blue" data-scroll>Give Now</a>
             </p>
+            <pre class="mb-0">[[ 3D Video Embed ]]</pre>
           </div>
           <div
             class="fullscreen o-100"
