more updates to overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -244,20 +244,19 @@
           </div>
         </div>
 
-        <div class="pt-7 position-relative text-center">
+        <div class="pt-7 pb-8 pb-md-9 position-relative text-center">
           <div class="text-constrained mx-auto px-6 bring-forward" data-aos="fade-up">
-            <h3 class="h5 text-blue mb-5"><span class="display-1 text-blue-dark">2023</span><br />Build Aiken Campus</h3>
+            <h3 class="h5 text-blue mb-5"><span class="display-2 text-blue-dark">2023</span><br />Build Aiken Campus</h3>
             <p class="lead text-gray-darker">
               Because of your generosity, we were able to purchase the land for the new Aiken Campus in 2021. But Aiken's story isn't done yet!
             </p>
-            <p class="mb-8">
+            <p>
               <a href="#give" class="btn btn-primary bg-blue" data-scroll>Give Now</a>
             </p>
-            <pre class="mb-0">[[ 3D Video Embed ]]</pre>
           </div>
           <div
             class="fullscreen o-100"
-            style="background: rgb(20, 20, 20); background: linear-gradient(0deg, var(--overflow-blue-light) 0%, transparent 80%); top: -250px"></div>
+            style="background: rgb(20, 20, 20); background: linear-gradient(0deg, var(--overflow-blue-light) 10%, transparent 90%); top: -250px"></div>
         </div>
 
         <div
@@ -265,7 +264,7 @@
           style="background-image: url('./Themes/new/Assets/Images/overflow_aikenariel_2x1.jpg')"></div>
       </section>
 
-      <section id="stories" class="bg-blue-light px-0 overflow-hidden">
+      <section id="stories" class="bg-blue-light px-0 pt-0 overflow-hidden">
         <div class="px-5 text-constrained mx-auto text-center mb-6">
           <p class="pretitle text-blue">The Aiken Story</p>
           <h2 class="text-white display-3">
@@ -283,6 +282,7 @@
             Our buildings should be areas where our community can comfortably gather, worship, and form tight-knit friendships. That’s why
             <a href="/2030.html">we want every NewSpring campus to exist in a permanent home by 2030.</a>
           </p>
+          <pre class="my-6">[[ 3D Video Embed ]]</pre>
           <p>
             In 2021, because of our church’s radical generosity, we were able to purchase the land for the Aiken Campus facility. This year, the Overflow
             Offering focuses on breaking ground and development of NewSpring Aiken’s facility.
@@ -504,7 +504,7 @@
             <p class="pretitle">Year in Review</p>
             <h2 class="display-2">Annual Report</h2>
           </div>
-          <div class="d-grid grid-cols-2 gap-7 mb-7 py-2">
+          <div class="d-grid grid-cols-2 gap-7 mb-7 py-2 pb-md-5">
             <div class="col-span-2 col-span-md-1 d-grid grid-cols-1 gap-y-4">
               <h3 class="h2 font-black text-white mb-0">2022 Income</h3>
               <div data-aos="fade-up">
