finished up routing

--- a/public/beliefs/item.html
+++ b/public/beliefs/item.html
@@ -24,8 +24,8 @@
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="./Themes/new/Scripts/dynamic-aos-min.js"></script>
-    <script src="./Themes/new/Scripts/accordions-min.js"></script>
+    <script src="/Themes/new/Scripts/dynamic-aos-min.js"></script>
+    <script src="/Themes/new/Scripts/accordions-min.js"></script>
 
     <!-- Swiper.js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -34,14 +34,14 @@
     <!-- SmoothScroll -->
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
 
-    <link rel="stylesheet" href="./Themes/new/Styles/bootstrap.css" />
-    <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/bootstrap.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/theme.css" />
   </head>
   <body>
     <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
       <div class="d-grid align-content-center">
         <a href="/" class="px-3 mb-0">
-          <img src="./Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
+          <img src="/Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
         </a>
       </div>
       <div class="overflow-hidden text-right">
@@ -66,7 +66,6 @@
     </section>
 
     <div id="content">
-
       <section class="position-relative bg-tertiary text-white d-flex justify-content-center align-content-center text-center py-6 py-md-7">
         <div class="bring-forward text-constrained">
           <p class="pretitle text-primary">What We Beleive About</p>
@@ -75,28 +74,52 @@
       </section>
 
       <section id="beliefs">
-          <div class="text-constrained mx-auto">
-            <p>Jesus, the eternal Son of God, exists uncreated and is equal in deity with the Father and the Holy Spirit. The promised and prophesied Messiah is the Word that became flesh and made His dwelling among us.</p>
-            <p>While retaining His divine nature, Jesus became man, being born of a virgin through the work of the Holy Spirit. Jesus is truly God and truly man. Though sinless, He suffered and died by crucifixion as an atoning sacrifice for our sin.</p>
-            <p>Buried in a borrowed tomb, Jesus bodily resurrected from the dead on the third day. He ascended into heaven and will return in the same manner to judge those living and those already dead. He reigns forever and His kingdom has no end.</p>
-            <p>Jesus is unique among other religious leaders in that He didn’t point to a path to be followed but declared Himself to be “the way, the truth, and the life.” Jesus is the only way to God.</p>
+        <div class="text-constrained mx-auto">
+          <p>
+            Jesus, the eternal Son of God, exists uncreated and is equal in deity with the Father and the Holy Spirit. The promised and prophesied Messiah is
+            the Word that became flesh and made His dwelling among us.
+          </p>
+          <p>
+            While retaining His divine nature, Jesus became man, being born of a virgin through the work of the Holy Spirit. Jesus is truly God and truly man.
+            Though sinless, He suffered and died by crucifixion as an atoning sacrifice for our sin.
+          </p>
+          <p>
+            Buried in a borrowed tomb, Jesus bodily resurrected from the dead on the third day. He ascended into heaven and will return in the same manner to
+            judge those living and those already dead. He reigns forever and His kingdom has no end.
+          </p>
+          <p>
+            Jesus is unique among other religious leaders in that He didn’t point to a path to be followed but declared Himself to be “the way, the truth, and
+            the life.” Jesus is the only way to God.
+          </p>
 
-            <h2 class="h5">Related Scriptures</h2>
-            <p><a href="https://www.bible.com/bible/116/MAT.1.22-23.NLT" class="scripture" title="YouVersion">Matthew 1:22-23</a>, <a href="https://www.bible.com/bible/116/ISA.9.6.NLT" class="scripture" title="YouVersion">Isaiah 9:6</a>, <a href="https://www.bible.com/bible/116/JHN.1.1-5.NLT" class="scripture" title="YouVersion">John 1:1-5</a>, <a href="https://www.bible.com/bible/116/JHN.14.10-30.NLT" class="scripture" title="YouVersion">John 14:10-30</a>, <a href="https://www.bible.com/bible/116/HEB.4.14-15.NLT" class="scripture" title="YouVersion">Hebrews 4:14-15</a>, <a href="https://www.bible.com/bible/116/1CO.15.3-4.NLT" class="scripture" title="YouVersion">1 Corinthians 15:3-4</a>, <a href="https://www.bible.com/bible/116/ROM.1.3-4.NLT" class="scripture" title="YouVersion">Romans 1:3-4</a>, <a href="https://www.bible.com/bible/116/ACT.1.9-11.NLT" class="scripture" title="YouVersion">Acts 1:9-11</a>, <a href="https://www.bible.com/bible/116/1TI.6.14-15.NLT" class="scripture" title="YouVersion">1 Timothy 6:14-15</a>, <a href="https://www.bible.com/bible/116/TIT.2.13.NLT" class="scripture" title="YouVersion">Titus 2:13</a>, <a href="https://www.bible.com/bible/116/JHN.14.6.NLT" class="scripture" title="YouVersion">John 14:6</a></p>
-            <h2 class="h5">Explore more:</h2>
-            <p>Article: <a href="/articles/why-did-jesus-have-to-die">Why did Jesus have to die</a><br>
-              Article: <a href="/articles/3-ways-jesus-wants-to-blow-your-mind">3 ways Jesus wants to blow your mind</a></p>
-            <p><a href="#" class="btn btn-primary">Back to Beliefs</a></p>
-          </div>
+          <h2 class="h5">Related Scriptures</h2>
+          <p>
+            <a href="https://www.bible.com/bible/116/MAT.1.22-23.NLT" class="scripture" title="YouVersion">Matthew 1:22-23</a>,
+            <a href="https://www.bible.com/bible/116/ISA.9.6.NLT" class="scripture" title="YouVersion">Isaiah 9:6</a>,
+            <a href="https://www.bible.com/bible/116/JHN.1.1-5.NLT" class="scripture" title="YouVersion">John 1:1-5</a>,
+            <a href="https://www.bible.com/bible/116/JHN.14.10-30.NLT" class="scripture" title="YouVersion">John 14:10-30</a>,
+            <a href="https://www.bible.com/bible/116/HEB.4.14-15.NLT" class="scripture" title="YouVersion">Hebrews 4:14-15</a>,
+            <a href="https://www.bible.com/bible/116/1CO.15.3-4.NLT" class="scripture" title="YouVersion">1 Corinthians 15:3-4</a>,
+            <a href="https://www.bible.com/bible/116/ROM.1.3-4.NLT" class="scripture" title="YouVersion">Romans 1:3-4</a>,
+            <a href="https://www.bible.com/bible/116/ACT.1.9-11.NLT" class="scripture" title="YouVersion">Acts 1:9-11</a>,
+            <a href="https://www.bible.com/bible/116/1TI.6.14-15.NLT" class="scripture" title="YouVersion">1 Timothy 6:14-15</a>,
+            <a href="https://www.bible.com/bible/116/TIT.2.13.NLT" class="scripture" title="YouVersion">Titus 2:13</a>,
+            <a href="https://www.bible.com/bible/116/JHN.14.6.NLT" class="scripture" title="YouVersion">John 14:6</a>
+          </p>
+          <h2 class="h5">Explore more:</h2>
+          <p>
+            Article: <a href="/articles/why-did-jesus-have-to-die">Why did Jesus have to die</a><br />
+            Article: <a href="/articles/3-ways-jesus-wants-to-blow-your-mind">3 ways Jesus wants to blow your mind</a>
+          </p>
+          <p><a href="#" class="btn btn-primary">Back to Beliefs</a></p>
+        </div>
       </section>
-
-
     </div>
 
     <footer class="bg-gray-dark text-white px-4 py-7 px-md-7 py-md-8 text-center">
       <div class="d-flex flex-column flex-md-row flex-wrap justify-content-between align-content-center">
         <div data-aos="fade-up" class="w-100 w-md-auto height-max-content text-md-left">
-          <img src="./Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
+          <img src="/Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
           <h6 class="font-black text-uppercase">NewSpring Church</h6>
           <p>PO Box 1407<br />Anderson, SC 29622<br /><a href="#">(864) 965-9990</a></p>
           <p class="font-sans font-medium">
@@ -146,11 +169,9 @@
     </footer>
 
     <script>
-	    
-      var scroll = new SmoothScroll('a[data-scroll]');
+      var scroll = new SmoothScroll("a[data-scroll]");
 
       $(".collapse").collapse();
-
     </script>
   </body>
 </html>
