--- a/public/jobs/item.html
+++ b/public/jobs/item.html
@@ -24,21 +24,21 @@
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="./Themes/new/Scripts/dynamic-aos-min.js"></script>
-    <script src="./Themes/new/Scripts/accordions-min.js"></script>
+    <script src="/Themes/new/Scripts/dynamic-aos-min.js"></script>
+    <script src="/Themes/new/Scripts/accordions-min.js"></script>
 
     <!-- Swiper.js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
-    <link rel="stylesheet" href="./Themes/new/Styles/bootstrap.css" />
-    <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/bootstrap.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/theme.css" />
   </head>
   <body>
     <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
       <div class="d-grid align-content-center">
         <a href="/" class="px-3 mb-0">
-          <img src="./Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
+          <img src="/Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
         </a>
       </div>
       <div class="overflow-hidden text-right">
@@ -63,7 +63,6 @@
     </section>
 
     <div id="content">
-
       <section class="position-relative bg-gray-darker text-white d-flex justify-content-center align-items-center py-7">
         <div class="bring-forward text-constrained text-center">
           <p class="pretitle">Job Opening</p>
@@ -75,18 +74,30 @@
       <section>
         <div class="text-constrained mx-auto">
           <h5>Position Responsibilities</h5>
-          
-          <p>For this KidSpring Director role, we’re looking for someone who is Humble, Passionate, and Disciplined to lead Kidspring. If you enjoy leading volunteer teams, teaching children, and equipping families to lead spiritually, this role could be for you!</p>
-          <p>To be qualified for this job, you’ll need to identify leaders, build teams, and implement systems for the benefit of the ministry and campus.</p><p>Two important things you should know:&nbsp;</p>
+
+          <p>
+            For this KidSpring Director role, we’re looking for someone who is Humble, Passionate, and Disciplined to lead Kidspring. If you enjoy leading
+            volunteer teams, teaching children, and equipping families to lead spiritually, this role could be for you!
+          </p>
+          <p>To be qualified for this job, you’ll need to identify leaders, build teams, and implement systems for the benefit of the ministry and campus.</p>
+          <p>Two important things you should know:&nbsp;</p>
           <ol>
-            <li>All NewSpring staff members agree to uphold our church’s <a href="https://docs.google.com/document/d/1Rn7lEDNIlurQUYvPS5C0Bnfx-mnpOJrKc4EGSwASZOk/edit?usp=sharing" target="_blank">vision and values</a> as well as our <a href="https://newspring.cc/beliefs" target="_blank">beliefs</a>. (You can learn more about our beliefs here.)&nbsp;</li>
-            <li>This job is located in Myrtle Beach, SC. Meet the team and learn more about the Myrtle Beach Campus <a href="https://newspring.cc/locations/myrtle-beach" target="_blank">here</a>.</li>
+            <li>
+              All NewSpring staff members agree to uphold our church’s
+              <a href="https://docs.google.com/document/d/1Rn7lEDNIlurQUYvPS5C0Bnfx-mnpOJrKc4EGSwASZOk/edit?usp=sharing" target="_blank">vision and values</a>
+              as well as our <a href="https://newspring.cc/beliefs" target="_blank">beliefs</a>. (You can learn more about our beliefs here.)&nbsp;
+            </li>
+            <li>
+              This job is located in Myrtle Beach, SC. Meet the team and learn more about the Myrtle Beach Campus
+              <a href="https://newspring.cc/locations/myrtle-beach" target="_blank">here</a>.
+            </li>
           </ol>
           <p>Feel like this job was made for you? The role responsibilities are listed below:</p>
           <ul>
             <li>Shepherd the KidSpring team at the Myrtle Beach Campus, this includes staff and volunteers</li>
             <li>Uphold the Mission, Pillars and Standards of KidSpring as a ministry set by KidSpring Support as a church</li>
-            <li>Oversee the operational aspects that lead up to and include Sundays including but not limited to
+            <li>
+              Oversee the operational aspects that lead up to and include Sundays including but not limited to
               <ul>
                 <li>Creating weekly schedule for room volunteers and room availability</li>
                 <li>Preparing environments for each new series</li>
@@ -94,7 +105,8 @@
                 <li>Coordinating weekday preparations&nbsp;</li>
               </ul>
             </li>
-            <li>Lead Kidspring Lead Team with Vision, Direction and Integrity&nbsp;
+            <li>
+              Lead Kidspring Lead Team with Vision, Direction and Integrity&nbsp;
               <ul>
                 <li>Provide consistent accountability to Lead Team Members via regular 1:1 Meetings</li>
                 <li>Provide consistent space for Lead Team Meetings no less than 1 time per month.</li>
@@ -106,19 +118,22 @@
           </ul>
 
           <p class="mb-0 text-center mt-6">
-            <a href="https://www.paycomonline.net/v4/ats/web.php/jobs/ViewJobDetails?job=139756&amp;clientkey=1CF181695CAD1FDDA359525FAD2F14A3" class="btn btn-primary" target="_blank">Apply Now</a>
+            <a
+              href="https://www.paycomonline.net/v4/ats/web.php/jobs/ViewJobDetails?job=139756&amp;clientkey=1CF181695CAD1FDDA359525FAD2F14A3"
+              class="btn btn-primary"
+              target="_blank"
+              >Apply Now</a
+            >
             <a href="/jobs.html#openings" class="btn btn-default">View More Jobs</a>
           </p>
-        
         </div>
       </section>
-
     </div>
 
     <footer class="bg-gray-dark text-white px-4 py-7 px-md-7 py-md-8 text-center">
       <div class="d-flex flex-column flex-md-row flex-wrap justify-content-between align-content-center">
         <div data-aos="fade-up" class="w-100 w-md-auto height-max-content text-md-left">
-          <img src="./Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
+          <img src="/Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
           <h6 class="font-black text-uppercase">NewSpring Church</h6>
           <p>PO Box 1407<br />Anderson, SC 29622<br /><a href="#">(864) 965-9990</a></p>
           <p class="font-sans font-medium">
@@ -166,6 +181,5 @@
         </div>
       </div>
     </footer>
-
   </body>
 </html>
