--- a/public/locations/item.html
+++ b/public/locations/item.html
@@ -24,8 +24,8 @@
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="./Themes/new/Scripts/dynamic-aos-min.js"></script>
-    <script src="./Themes/new/Scripts/accordions-min.js"></script>
+    <script src="/Themes/new/Scripts/dynamic-aos-min.js"></script>
+    <script src="/Themes/new/Scripts/accordions-min.js"></script>
 
     <!-- Smooth Scroll -->
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
@@ -34,15 +34,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
-    <link rel="stylesheet" href="./Themes/new/Styles/bootstrap.css" />
-    <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
-    <link rel="stylesheet" href="./Themes/new/Styles/gauntlet.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/bootstrap.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/theme.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/gauntlet.css" />
   </head>
   <body>
     <section class="bring-forward p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center shadow-md" style="z-index: 100">
       <div class="d-grid align-content-center">
         <a href="/" class="px-4 mb-0">
-          <img src="./Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
+          <img src="/Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
         </a>
       </div>
       <div class="overflow-hidden text-right">
@@ -615,7 +615,7 @@
     <footer class="bg-gray-dark text-white px-4 py-7 px-md-7 py-md-8 text-center">
       <div class="d-flex flex-column flex-md-row flex-wrap justify-content-between align-content-end">
         <div data-aos="fade-up" class="w-100 w-md-auto height-max-content text-md-left">
-          <img src="./Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
+          <img src="/Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
           <h6 class="font-black text-uppercase">NewSpring Church</h6>
           <p>PO Box 1407<br />Anderson, SC 29622<br /><a href="#">(864) 965-9990</a></p>
           <p class="font-sans font-medium">
