--- a/public/beliefs/index.html
+++ b/public/beliefs/index.html
@@ -24,8 +24,8 @@
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="./Themes/new/Scripts/dynamic-aos-min.js"></script>
-    <script src="./Themes/new/Scripts/accordions-min.js"></script>
+    <script src="/Themes/new/Scripts/dynamic-aos-min.js"></script>
+    <script src="/Themes/new/Scripts/accordions-min.js"></script>
 
     <!-- Swiper.js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -34,14 +34,14 @@
     <!-- SmoothScroll -->
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
 
-    <link rel="stylesheet" href="./Themes/new/Styles/bootstrap.css" />
-    <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/bootstrap.css" />
+    <link rel="stylesheet" href="/Themes/new/Styles/theme.css" />
   </head>
   <body>
     <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
       <div class="d-grid align-content-center">
         <a href="/" class="px-3 mb-0">
-          <img src="./Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
+          <img src="/Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
         </a>
       </div>
       <div class="overflow-hidden text-right">
@@ -67,31 +67,50 @@
 
     <section id="navigation-secondary" class="py-2 px-1 py-md-3 bring-forward drop-shadow">
       <div class="d-flex flex-column flex-md-row justify-content-between align-content-center px-2">
-        <h2 class="h6 mb-0 d-flex justify-content-between" style="margin-top: 2px;">About <i class="fa-solid fa-caret-down hidden-md hidden-lg hidden-xl" role="button" data-toggle="collapse" href="#nav-secondary" aria-expanded="false" aria-controls="nav-secondary"></i></h2>
+        <h2 class="h6 mb-0 d-flex justify-content-between" style="margin-top: 2px">
+          About
+          <i
+            class="fa-solid fa-caret-down hidden-md hidden-lg hidden-xl"
+            role="button"
+            data-toggle="collapse"
+            href="#nav-secondary"
+            aria-expanded="false"
+            aria-controls="nav-secondary"></i>
+        </h2>
         <div class="collapse in" id="nav-secondary">
           <ul class="px-2 py-1 px-md-0 py-md-0 d-flex flex-column flex-md-row list-unstyled mb-0 gap-x-sm-4 text-center mt-2 mt-md-0 rounded">
-            <li class="d-flex flex-wrap align-content-center"><a href="/about" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">About Us</a></li>
-            <li class="d-flex flex-wrap align-content-center"><a href="/our-beliefs" class="text-white d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Beliefs</a></li>
-            <li class="d-flex flex-wrap align-content-center"><a href="/staff" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Staff</a></li>
-            <li class="d-flex flex-wrap align-content-center"><a href="/story" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Story</a></li>
+            <li class="d-flex flex-wrap align-content-center">
+              <a href="/about" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">About Us</a>
+            </li>
+            <li class="d-flex flex-wrap align-content-center">
+              <a href="/our-beliefs" class="text-white d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Beliefs</a>
+            </li>
+            <li class="d-flex flex-wrap align-content-center">
+              <a href="/staff" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Staff</a>
+            </li>
+            <li class="d-flex flex-wrap align-content-center">
+              <a href="/story" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Story</a>
+            </li>
           </ul>
         </div>
       </div>
-
-      
     </section>
 
     <div id="content">
-
-      <section class="position-relative text-white d-flex justify-content-center align-content-center text-center" style="background: rgb(40,120,180);">
+      <section class="position-relative text-white d-flex justify-content-center align-content-center text-center" style="background: rgb(40, 120, 180)">
         <div
           class="fullscreen background-cover background-center o-70"
           style="background-image: url('https://dg0ddngxdz549.cloudfront.net/newspring/beliefs/2023/beliefs_hero_2x1.jpg')"></div>
-        <div class="fullscreen o-90" style="background: rgb(40,120,180);
-  background: linear-gradient(0deg, rgba(40,120,180,0) 0%, rgba(40,120,180,1) 100%);"></div>
+        <div
+          class="fullscreen o-90"
+          style="background: rgb(40, 120, 180); background: linear-gradient(0deg, rgba(40, 120, 180, 0) 0%, rgba(40, 120, 180, 1) 100%)"></div>
         <div class="bring-forward text-constrained" style="height: max-content !important">
           <h1 class="display-3">Our Beliefs</h1>
-          <p>Jesus is the head of our church, and His Word is the standard for how we live — as individuals and as God’s family — for the glory of God. Below are brief statements for each of the essential Christian beliefs that we hold as a church and that are foundational to following Jesus in loving, faith-filled obedience.</p>
+          <p>
+            Jesus is the head of our church, and His Word is the standard for how we live — as individuals and as God’s family — for the glory of God. Below are
+            brief statements for each of the essential Christian beliefs that we hold as a church and that are foundational to following Jesus in loving,
+            faith-filled obedience.
+          </p>
           <p class="mb-0"><a href="#beliefs" data-scroll class="btn btn-primary drop-shadow">Learn More</a></p>
         </div>
       </section>
@@ -100,68 +119,93 @@
         <div class="page-constrained mx-auto d-grid grid-cols-1 grid-cols-md-2 gap-y-3 gap-md-6" data-aos="fade-up">
           <div>
             <h2 class="h2">God</h2>
-            <p>God is creator of the universe and author of life. God is spirit, and therefore, is timeless. Sovereignly possessing all power and all knowledge, He never tires, gains strength, or acquires new knowledge. He is all-present in the universe. God never changes.</p>
+            <p>
+              God is creator of the universe and author of life. God is spirit, and therefore, is timeless. Sovereignly possessing all power and all knowledge,
+              He never tires, gains strength, or acquires new knowledge. He is all-present in the universe. God never changes.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Jesus</h2>
-            <p>Jesus, the eternal Son of God, exists uncreated and is equal in deity with the Father and the Holy Spirit. The promised and prophesied Messiah is the Word that became flesh and made His dwelling among us.</p>
+            <p>
+              Jesus, the eternal Son of God, exists uncreated and is equal in deity with the Father and the Holy Spirit. The promised and prophesied Messiah is
+              the Word that became flesh and made His dwelling among us.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Holy Spirit</h2>
-            <p>The Holy Spirit, third person of the Trinity, co-equal in deity with God the Father and God the Son, is the promised Comforter, the Helper, the Spirit of Christ, who lives in those who follow Jesus.</p>
+            <p>
+              The Holy Spirit, third person of the Trinity, co-equal in deity with God the Father and God the Son, is the promised Comforter, the Helper, the
+              Spirit of Christ, who lives in those who follow Jesus.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">The Bible</h2>
-            <p>The Bible, containing Old and New Testaments, is the infallible, inspired word of God. Written by human authors under the supernatural guidance of the Holy Spirit, the Bible is the ultimate source of doctrine, instruction, correction, and reproof.</p>
+            <p>
+              The Bible, containing Old and New Testaments, is the infallible, inspired word of God. Written by human authors under the supernatural guidance of
+              the Holy Spirit, the Bible is the ultimate source of doctrine, instruction, correction, and reproof.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Humanity</h2>
-            <p>Humanity is made in the image of God. Because we are made in His image, we are unique among creation and have special worth derived from our maker. Made in God’s image, He defines our identity and we belong to Him. Our purpose cannot be separated from Him.</p>
+            <p>
+              Humanity is made in the image of God. Because we are made in His image, we are unique among creation and have special worth derived from our
+              maker. Made in God’s image, He defines our identity and we belong to Him. Our purpose cannot be separated from Him.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Salvation</h2>
-            <p>Jesus is the only way to God. There is no other way of salvation. By trusting in Jesus, we are saved from the curse and penalty of sin and can enjoy an abundant, eternal life that begins when we believe.</p>
+            <p>
+              Jesus is the only way to God. There is no other way of salvation. By trusting in Jesus, we are saved from the curse and penalty of sin and can
+              enjoy an abundant, eternal life that begins when we believe.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Eternal Security</h2>
-            <p>Because God gives eternal life through Jesus Christ, believers are secure in their salvation for eternity. Salvation is maintained by the grace and power of God, not by a Christian’s self-effort. It is the grace and eternal power of God that gives this security. We are assured of our salvation based on the character of God who can never lie.</p>
+            <p>
+              Because God gives eternal life through Jesus Christ, believers are secure in their salvation for eternity. Salvation is maintained by the grace
+              and power of God, not by a Christian’s self-effort. It is the grace and eternal power of God that gives this security. We are assured of our
+              salvation based on the character of God who can never lie.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Eternity</h2>
-            <p>We were created to exist forever. Those who follow Christ will exist eternally together with Christ in the kingdom of heaven. Those who do not know Christ will be separated from God in eternal torment.</p>
+            <p>
+              We were created to exist forever. Those who follow Christ will exist eternally together with Christ in the kingdom of heaven. Those who do not
+              know Christ will be separated from God in eternal torment.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Why We Gather</h2>
-            <p>God promises when two or three are gathered, He is present among us in a special way. Our gatherings accomplish three important functions: worship, discipleship, and evangelism.</p>
+            <p>
+              God promises when two or three are gathered, He is present among us in a special way. Our gatherings accomplish three important functions:
+              worship, discipleship, and evangelism.
+            </p>
             <p><a href="#">Read More</a></p>
           </div>
-
         </div>
       </section>
-
-
     </div>
 
     <footer class="bg-gray-dark text-white px-4 py-7 px-md-7 py-md-8 text-center">
       <div class="d-flex flex-column flex-md-row flex-wrap justify-content-between align-content-center">
         <div data-aos="fade-up" class="w-100 w-md-auto height-max-content text-md-left">
-          <img src="./Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
+          <img src="/Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
           <h6 class="font-black text-uppercase">NewSpring Church</h6>
           <p>PO Box 1407<br />Anderson, SC 29622<br /><a href="#">(864) 965-9990</a></p>
           <p class="font-sans font-medium">
@@ -211,11 +255,9 @@
     </footer>
 
     <script>
-	    
-      var scroll = new SmoothScroll('a[data-scroll]');
+      var scroll = new SmoothScroll("a[data-scroll]");
 
       $(".collapse").collapse();
-
     </script>
   </body>
 </html>
