made copy change on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -279,7 +279,8 @@
             <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="800">&mdash; literally.</span>
           </h2>
           <p>
-            Our buildings should be areas where our community can comfortably gather, worship, and form tight-knit friendships. That’s why
+            Our hope is that our buildings would each be a space where the local community surrounding it can gather to worship, grow, and connect with each
+            other. That’s why
             <a href="/2030.html">we want every NewSpring campus to exist in a permanent home by 2030.</a>
           </p>
           <pre class="my-6">[[ 3D Video Embed ]]</pre>
