made copy change on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -279,7 +279,7 @@
             <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="800">&mdash; literally.</span>
           </h2>
           <p>
-            Our hope is that our buildings would each be a space where the local community surrounding it can gather to worship, grow, and connect with each
+            Our hope is that our buildings would be spaces where the local communities surrounding them can gather to worship, grow, and connect with each
             other. That’s why
             <a href="/2030.html">we want every NewSpring campus to exist in a permanent home by 2030.</a>
           </p>
