more updates to overflow

--- a/overflow.html
+++ b/overflow.html
@@ -371,7 +371,9 @@
                   Eu eu dolor cillum tempor id minim aliqua. Sit velit eu ad ipsum esse velit proident id culpa culpa id. Ex deserunt laborum voluptate est ea
                   nulla sunt esse sit magna occaecat culpa ea minim. Quis nulla dolore do irure ea exercitation culpa.”
                 </p>
-                <p class="mb-0 text-blue-dark"><span class="h4 italic font-serif font-bold text-blue tracking-tight">Cody Boynton</span><br />Fuse Staff</p>
+                <p class="mb-0 text-blue-dark">
+                  <span class="h4 italic font-serif font-bold text-blue tracking-tight">Cody Boynton</span><br />Fuse Support Staff
+                </p>
               </div>
             </div>
           </div>
@@ -419,6 +421,12 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="px-5 px-md-8 page-constrained mx-auto text-center">
+          <p>
+            <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
+          </p>
         </div>
       </section>
 
